--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 PROJECT ("Buscaminas")
 cmake_minimum_required(VERSION 3.1)
-add_executable(Buscaminas main.cpp)
+add_executable(buscaminas buscaminas.cpp)
